--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
+version: '3.8'
+
 services:
   web:
     build: .
     entrypoint: ["/app/entrypoint.sh"]
-    command: python manage.py runserver 0.0.0.0:8000
+    command: ["web"]
     volumes:
       - .:/app
     ports:
@@ -11,6 +13,15 @@ services:
       - .env
     networks:
       - backend
+    depends_on:
+      db:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "python", "-c", "import socket; socket.socket().connect(('localhost', 8000))"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   db:
     image: postgres:13
@@ -24,6 +35,11 @@ services:
       - .env
     networks:
       - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
@@ -33,14 +49,36 @@ services:
 
   celery:
     build: .
-    command: celery -A imdb_clone.celery.app worker --loglevel=info
+    entrypoint: ["/app/entrypoint.sh"]
+    command: ["celery"]
     env_file:
       - .env
     networks:
       - backend
+    depends_on:
+      web:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - backend
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   postgres_data:
+  pgadmin_data:
 
 networks:
   backend:
