--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ Django==4.2.19
 django-cors-headers==4.7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+gunicorn==23.0.0
 kombu==5.4.2
+packaging==24.2
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
