Update ci.yml to disable celery container during CI
Disabled the celery container during the CI process by scaling it to 0 in the Docker Compose command. This change avoids the "unhealthy" status error related to the celery service, as it is not needed for running tests in this CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,8 @@ jobs:
           echo "CELERY_BROKER_URL=${{ secrets.CELERY_BROKER_URL }}" >> .env
 
       - name: Start Docker Compose environment
-        run: docker-compose up -d
+        run: docker-compose up -d --scale celery=0
+
 
       - name: Wait for PostgreSQL to be ready
         run: |
