Update ci.yml to exclude Celery container during CI build
Modified the GitHub Actions CI pipeline to start only the web and db services, excluding the Celery container. This prevents errors related to Celery being unhealthy during the CI build process, ensuring a smooth execution of the pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           echo "CELERY_BROKER_URL=${{ secrets.CELERY_BROKER_URL }}" >> .env
 
       - name: Start Docker Compose environment
-        run: docker-compose up -d --scale celery=0
+        run: docker-compose up -d web db
 
 
       - name: Wait for PostgreSQL to be ready
