--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,23 +12,21 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DB_NAME: ${{ secrets.DB_NAME || 'imdb_test' }}
-      DB_USER: ${{ secrets.DB_USER || 'postgres' }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD || 'postgres' }}
-      DB_HOST: ${{ secrets.DB_HOST || 'db' }}
-      DB_PORT: ${{ secrets.DB_PORT || '5432' }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY || 'test-key-123' }}
-      CELERY_BROKER_URL: ${{ secrets.CELERY_BROKER_URL || 'redis://redis:6379/0' }}
+      DB_NAME: imdb_test
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      SECRET_KEY: test-key-123
+      CELERY_BROKER_URL: redis://redis:6379/0
+      CELERY_TASK_ALWAYS_EAGER: True
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Compose
-        run: |
-          curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m) -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
 
       - name: Create .env file
         run: |
@@ -39,24 +37,19 @@ jobs:
           echo "DB_PORT=${DB_PORT}" >> .env
           echo "SECRET_KEY=${SECRET_KEY}" >> .env
           echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
+          echo "CELERY_TASK_ALWAYS_EAGER=${CELERY_TASK_ALWAYS_EAGER}" >> .env
 
       - name: Start Docker Compose environment
         run: docker-compose up -d --scale celery=0
 
       - name: Wait for PostgreSQL to be ready
-        run: |
-          echo "Waiting for PostgreSQL to be ready..."
-          sleep 10
-          until docker-compose exec -T db pg_isready -U $DB_USER; do
-            echo "Waiting for PostgreSQL..."
-            sleep 2
-          done
+        run: docker-compose run --rm web bash -c "until pg_isready -h db -p 5432 -U $DB_USER; do sleep 2; done"
 
       - name: Run Migrations
-        run: docker-compose exec -T web python manage.py migrate
+        run: docker-compose run --rm web python manage.py migrate
 
       - name: Run Tests
-        run: docker-compose exec -T web pytest
+        run: docker-compose run --rm web pytest
 
       - name: Shut Down Docker Compose Environment
         run: docker-compose down
