--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
 
 services:
   web:
     build: .
     entrypoint: ["/app/entrypoint.sh"]
-    command: ["web"]
+    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     volumes:
       - .:/app
     ports:
@@ -50,7 +49,7 @@ services:
   celery:
     build: .
     entrypoint: ["/app/entrypoint.sh"]
-    command: ["celery"]
+    command: ["celery", "-A", "imdb_clone", "worker", "--loglevel=info"]
     env_file:
       - .env
     networks:
