--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      - name: Install Docker Compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose-plugin
+
       - name: Create .env file
         run: |
           echo "DB_NAME=${DB_NAME}" > .env
@@ -39,21 +42,21 @@ jobs:
           echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
           echo "CELERY_TASK_ALWAYS_EAGER=${CELERY_TASK_ALWAYS_EAGER}" >> .env
 
-      - name: Start Web Server
-        run: docker-compose run --rm web web
-        
-      - name: Start Celery Worker
-        run: docker-compose run --rm celery celery
+      - name: Start Docker Compose Services
+        run: docker compose up -d
 
       - name: Wait for PostgreSQL to be ready
-        run: docker compose run --rm web bash -c "until pg_isready -h db -p 5432 -U $DB_USER; do sleep 2; done"
+        run: |
+          until docker compose exec db pg_isready -h db -p 5432 -U $DB_USER; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
 
       - name: Run Migrations
-        run: docker compose run --rm web python manage.py migrate
+        run: docker compose exec web python manage.py migrate
 
       - name: Run Tests
-        run: docker compose run --rm web pytest
+        run: docker compose exec web pytest
 
       - name: Shut Down Docker Compose Environment
         run: docker compose down
-
