--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,6 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
       - name: Create .env file
         run: |
           echo "DB_NAME=${DB_NAME}" > .env
@@ -44,11 +39,9 @@ jobs:
           echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
           echo "CELERY_TASK_ALWAYS_EAGER=${CELERY_TASK_ALWAYS_EAGER}" >> .env
 
-      - name: Start Web Server
-        run: docker-compose run --rm web web
-        
-      - name: Start Celery Worker
-        run: docker-compose run --rm celery celery
+      - name: Start Web Server 
+        run: |
+          docker-compose up -d db redis 
 
       - name: Wait for PostgreSQL to be ready
         run: docker-compose run --rm web bash -c "until pg_isready -h db -p 5432 -U $DB_USER; do sleep 2; done"
