--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       DB_PORT: 5432
       SECRET_KEY: test-key-123
       CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_TASK_ALWAYS_EAGER: True
+      CELERY_TASK_ALWAYS_EAGER: true
 
     steps:
       - name: Checkout repository
@@ -27,6 +27,11 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Create .env file
         run: |
@@ -39,9 +44,8 @@ jobs:
           echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
           echo "CELERY_TASK_ALWAYS_EAGER=${CELERY_TASK_ALWAYS_EAGER}" >> .env
 
-      - name: Start Web Server 
-        run: |
-          docker-compose up -d db redis 
+      - name: Start necessary services
+        run: docker-compose up -d db redis
 
       - name: Wait for PostgreSQL to be ready
         run: docker-compose run --rm web bash -c "until pg_isready -h db -p 5432 -U $DB_USER; do sleep 2; done"
