--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,58 +1,59 @@
-name: Django CI with Docker Compose
+name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
   pull_request:
-    branches: [ main, develop ]
+    branches:
+      - main
 
 jobs:
-  test:
-    name: Run Tests using Docker Compose
+  build:
     runs-on: ubuntu-latest
 
-    env:
-      DB_NAME: imdb_test
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_HOST: db
-      DB_PORT: 5432
-      SECRET_KEY: test-key-123
-      CELERY_BROKER_URL: redis://redis:6379/0
-      CELERY_TASK_ALWAYS_EAGER: True
+    services:
+      db:
+        image: postgres:13
+        env:
+          POSTGRES_DB: imdb
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 5
+
+      redis:
+        image: redis:latest
+        ports:
+          - 6379:6379
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
 
-      - name: Create .env file
+      - name: Install dependencies
         run: |
-          echo "DB_NAME=${DB_NAME}" > .env
-          echo "DB_USER=${DB_USER}" >> .env
-          echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
-          echo "DB_HOST=${DB_HOST}" >> .env
-          echo "DB_PORT=${DB_PORT}" >> .env
-          echo "SECRET_KEY=${SECRET_KEY}" >> .env
-          echo "CELERY_BROKER_URL=${CELERY_BROKER_URL}" >> .env
-          echo "CELERY_TASK_ALWAYS_EAGER=${CELERY_TASK_ALWAYS_EAGER}" >> .env
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Start Web Server
-        run: docker-compose run --rm web web
-        
-      - name: Start Celery Worker
-        run: docker-compose run --rm celery celery
+      - name: Run tests
+        run: |
+          python -m pytest
 
-      - name: Wait for PostgreSQL to be ready
-        run: docker-compose run --rm web bash -c "until pg_isready -h db -p 5432 -U $DB_USER; do sleep 2; done"
+      - name: Build Docker image
+        run: |
+          docker build -t myapp .
 
-      - name: Run Migrations
-        run: docker-compose run --rm web python manage.py migrate
-
-      - name: Run Tests
-        run: docker-compose run --rm web pytest
-
-      - name: Shut Down Docker Compose Environment
-        run: docker-compose down
+      - name: Run Docker container
+        run: |
+          docker run -d -p 8000:8000 myapp
