--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,51 +9,39 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     services:
-      db:
+      postgres:
         image: postgres:13
         env:
-          POSTGRES_DB: imdb
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_imdb
         ports:
           - 5432:5432
         options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval 5s
+          --health-cmd pg_isready
+          --health-interval 10s
           --health-timeout 5s
           --health-retries 5
 
-      redis:
-        image: redis:latest
-        ports:
-          - 6379:6379
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v4
+      
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
+          
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run tests
+          
+      - name: Run Tests
+        env:
+          DJANGO_SETTINGS_MODULE: imdb_clone.test_settings
         run: |
-          python -m pytest
-
-      - name: Build Docker image
-        run: |
-          docker build -t myapp .
-
-      - name: Run Docker container
-        run: |
-          docker run -d -p 8000:8000 myapp
+          python manage.py test
