Update test command in CI workflow
- Add auto-confirmation for test database deletion
- Fix database already exists error in CI pipeline
- Ensure uninterrupted test execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 5432
         run: |
-          python manage.py test
+          yes "yes" | python manage.py test  # Auto-confirm database deletion
