Add PostgreSQL wait step, apply migrations before tests in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -40,6 +40,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          dockerize -wait tcp://localhost:5432 -timeout 1m
+
+      - name: Apply database migrations
+        run: |
+          python manage.py migrate
+
       - name: Run Tests
         env:
           DJANGO_SETTINGS_MODULE: imdb_clone.test_settings
