--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 Django==4.2.19
 django-cors-headers==4.7.0
+django-redis==5.4.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 exceptiongroup==1.2.2
