--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ async-timeout==5.0.1
 billiard==4.2.1
 black==25.1.0
 celery==5.4.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cloudinary==1.42.2
 Django==4.2.19
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
 django-redis==5.4.0
 djangorestframework==3.15.2
@@ -16,6 +20,7 @@ djangorestframework_simplejwt==5.4.0
 exceptiongroup==1.2.2
 flake8==7.1.2
 gunicorn==23.0.0
+idna==3.10
 iniconfig==2.0.0
 isort==6.0.0
 kombu==5.4.2
@@ -35,10 +40,12 @@ pytest-django==4.10.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 redis==5.2.1
+requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 vine==5.1.0
 wcwidth==0.2.13
