--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     networks:
       - backend
     depends_on:
-      db:
-        condition: service_healthy
+        db:
+          condition: service_healthy
+        redis:
+          condition: service_healthy
     healthcheck:
       test: ["CMD", "python", "-c", "import socket; socket.socket().connect(('localhost', 8000))"]
       interval: 10s
@@ -45,6 +47,11 @@ services:
     container_name: redis
     networks:
       - backend
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      retries: 5
+
 
   celery:
     build: .
@@ -58,7 +65,7 @@ services:
       web:
         condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
 
   pgadmin:
     image: dpage/pgadmin4
